fix spacing

--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -18,6 +18,10 @@
   text-align: center;
 }
 
+.featured-img {
+  margin-top: 32px;
+}
+
 .post-category {
   text-decoration: underline;
 }
